[package]
name = "a2ltool"
version = "2.0.1"
authors = ["Daniel Thaler <daniel@dthaler.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a2lfile = "2.0.0"
object = { version = "~0.36", default-features = false, features = ["read"] }
gimli = { version = "~0.30", default-features = false, features = ["read"] }
memmap2 = "~0.9"
clap = { version = "~4.5", features = ["wrap_help"]}
cpp_demangle = "0.4.3"
regex = "1"
indexmap = "2.2.0"
fxhash = "0.2.1"

[profile.release]
panic = "abort"
strip = "debuginfo"
lto = "fat"
